--- a/src/app/classe/classe.component.html
+++ b/src/app/classe/classe.component.html
@@ -27,10 +27,10 @@
                         
                                         </tr>
                                     </thead>
-                                    <tbody>
+                                    <tbody *ngIf="listclass[0]">
                                         <tr *ngFor="let item of listclass;let i=index;">
                                             <td >
-                                            {{item}}
+                                            {{item?.libelle}}
                                             </td>
                     
                                             <td>
@@ -44,7 +44,6 @@
                                                 </a>
                                             </td>
                                         </tr>
-                        
                                     </tbody>
                                 </table>
                             </ng-container>
@@ -74,7 +73,7 @@
                                             </div>
                                         </div>
                                     </fieldset>
-                                  </form>
+                                </form>
                             </ng-container>
                         </div>
                     </div>
